--- a/Projects/aind2-nlp-capstone/machine_translation.ipynb
+++ b/Projects/aind2-nlp-capstone/machine_translation.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,9 +31,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/siguma/anaconda3/envs/aind-nlp/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import collections\n",
     "\n",
@@ -62,9 +72,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[name: \"/device:CPU:0\"\n",
+      "device_type: \"CPU\"\n",
+      "memory_limit: 268435456\n",
+      "locality {\n",
+      "}\n",
+      "incarnation: 1316462749549379174\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.python.client import device_lib\n",
     "print(device_lib.list_local_devices())"
@@ -82,9 +106,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Loaded\n"
+     ]
+    }
+   ],
    "source": [
     "# Load English data\n",
     "english_sentences = helper.load_data('data/small_vocab_en')\n",
@@ -104,9 +136,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "small_vocab_en Line 1:  new jersey is sometimes quiet during autumn , and it is snowy in april .\n",
+      "small_vocab_fr Line 1:  new jersey est parfois calme pendant l' automne , et il est neigeux en avril .\n",
+      "small_vocab_en Line 2:  the united states is usually chilly during july , and it is usually freezing in november .\n",
+      "small_vocab_fr Line 2:  les états-unis est généralement froid en juillet , et il gèle habituellement en novembre .\n"
+     ]
+    }
+   ],
    "source": [
     "for sample_i in range(2):\n",
     "    print('small_vocab_en Line {}:  {}'.format(sample_i + 1, english_sentences[sample_i]))\n",
@@ -124,9 +167,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1823250 English words.\n",
+      "227 unique English words.\n",
+      "10 Most common words in the English dataset:\n",
+      "\"is\" \",\" \".\" \"in\" \"it\" \"during\" \"the\" \"but\" \"and\" \"sometimes\"\n",
+      "\n",
+      "1961295 French words.\n",
+      "355 unique French words.\n",
+      "10 Most common words in the French dataset:\n",
+      "\"est\" \".\" \",\" \"en\" \"il\" \"les\" \"mais\" \"et\" \"la\" \"parfois\"\n"
+     ]
+    }
+   ],
    "source": [
     "english_words_counter = collections.Counter([word for sentence in english_sentences for word in sentence.split()])\n",
     "french_words_counter = collections.Counter([word for sentence in french_sentences for word in sentence.split()])\n",
@@ -165,9 +224,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'the': 1, 'quick': 2, 'a': 3, 'brown': 4, 'fox': 5, 'jumps': 6, 'over': 7, 'lazy': 8, 'dog': 9, 'by': 10, 'jove': 11, 'my': 12, 'study': 13, 'of': 14, 'lexicography': 15, 'won': 16, 'prize': 17, 'this': 18, 'is': 19, 'short': 20, 'sentence': 21}\n",
+      "\n",
+      "Sequence 1 in x\n",
+      "  Input:  The quick brown fox jumps over the lazy dog .\n",
+      "  Output: [1, 2, 4, 5, 6, 7, 1, 8, 9]\n",
+      "Sequence 2 in x\n",
+      "  Input:  By Jove , my quick study of lexicography won a prize .\n",
+      "  Output: [10, 11, 12, 2, 13, 14, 15, 16, 3, 17]\n",
+      "Sequence 3 in x\n",
+      "  Input:  This is a short sentence .\n",
+      "  Output: [18, 19, 3, 20, 21]\n"
+     ]
+    }
+   ],
    "source": [
     "def tokenize(x):\n",
     "    \"\"\"\n",
@@ -176,7 +253,11 @@
     "    :return: Tuple of (tokenized x data, tokenizer used to tokenize x)\n",
     "    \"\"\"\n",
     "    # TODO: Implement\n",
-    "    return None, None\n",
+    "    tokenizer = Tokenizer()\n",
+    "    tokenizer.fit_on_texts(x)\n",
+    "    sequences = tokenizer.texts_to_sequences(x)\n",
+    "    \n",
+    "    return sequences, tokenizer\n",
     "tests.test_tokenize(tokenize)\n",
     "\n",
     "# Tokenize Example output\n",
@@ -205,9 +286,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sequence 1 in x\n",
+      "  Input:  [1 2 4 5 6 7 1 8 9]\n",
+      "  Output: [1 2 4 5 6 7 1 8 9 0]\n",
+      "Sequence 2 in x\n",
+      "  Input:  [10 11 12  2 13 14 15 16  3 17]\n",
+      "  Output: [10 11 12  2 13 14 15 16  3 17]\n",
+      "Sequence 3 in x\n",
+      "  Input:  [18 19  3 20 21]\n",
+      "  Output: [18 19  3 20 21  0  0  0  0  0]\n"
+     ]
+    }
+   ],
    "source": [
     "def pad(x, length=None):\n",
     "    \"\"\"\n",
@@ -217,7 +314,7 @@
     "    :return: Padded numpy array of sequences\n",
     "    \"\"\"\n",
     "    # TODO: Implement\n",
-    "    return None\n",
+    "    return pad_sequences(x, maxlen=length, padding='post')\n",
     "tests.test_pad(pad)\n",
     "\n",
     "# Pad Tokenized output\n",
@@ -238,9 +335,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Preprocessed\n",
+      "Max English sentence length: 15\n",
+      "Max French sentence length: 21\n",
+      "English vocabulary size: 199\n",
+      "French vocabulary size: 344\n"
+     ]
+    }
+   ],
    "source": [
     "def preprocess(x, y):\n",
     "    \"\"\"\n",
@@ -294,9 +403,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "`logits_to_text` function loaded.\n"
+     ]
+    }
+   ],
    "source": [
     "def logits_to_text(logits, tokenizer):\n",
     "    \"\"\"\n",
@@ -338,7 +455,11 @@
     "    :return: Keras model built, but not trained\n",
     "    \"\"\"\n",
     "    # TODO: Build the layers\n",
-    "    model = None\n",
+    "    inputs = Input(shape=input_shape[1:])\n",
+    "    rnn = GRU(100, return_sequences=True)(inputs)\n",
+    "    predictions = Dense(french_vocab_size, activation='softmax')(rnn)\n",
+    "    \n",
+    "    model = Model(inputs=inputs, outputs=predictions)\n",
     "    model.compile(loss=sparse_categorical_crossentropy,\n",
     "                  optimizer=Adam(learning_rate),\n",
     "                  metrics=['accuracy'])\n",
@@ -605,7 +726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
