--- a/Projects/aind2-nlp-capstone/machine_translation.ipynb
+++ b/Projects/aind2-nlp-capstone/machine_translation.ipynb
@@ -21,7 +21,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -77,20 +79,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[name: \"/cpu:0\"\n",
+      "[name: \"/device:CPU:0\"\n",
       "device_type: \"CPU\"\n",
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 2621359063960323448\n",
-      ", name: \"/gpu:0\"\n",
-      "device_type: \"GPU\"\n",
-      "memory_limit: 11332668621\n",
-      "locality {\n",
-      "  bus_id: 1\n",
-      "}\n",
-      "incarnation: 13552490180459635386\n",
-      "physical_device_desc: \"device: 0, name: Tesla K80, pci bus id: 0000:00:1e.0\"\n",
+      "incarnation: 7555176865547706043\n",
       "]\n"
      ]
     }
@@ -237,17 +231,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'is': 4, 'by': 5, 'of': 6, 'over': 7, 'quick': 1, 'lexicography': 8, 'jove': 9, 'a': 2, 'the': 3, 'dog': 10, 'jumps': 20, 'won': 18, 'lazy': 13, 'fox': 14, 'brown': 15, 'my': 16, 'prize': 17, 'this': 11, 'study': 19, 'sentence': 12, 'short': 21}\n",
+      "{'the': 1, 'quick': 2, 'a': 3, 'brown': 4, 'fox': 5, 'jumps': 6, 'over': 7, 'lazy': 8, 'dog': 9, 'by': 10, 'jove': 11, 'my': 12, 'study': 13, 'of': 14, 'lexicography': 15, 'won': 16, 'prize': 17, 'this': 18, 'is': 19, 'short': 20, 'sentence': 21}\n",
       "\n",
       "Sequence 1 in x\n",
       "  Input:  The quick brown fox jumps over the lazy dog .\n",
-      "  Output: [3, 1, 15, 14, 20, 7, 3, 13, 10]\n",
+      "  Output: [1, 2, 4, 5, 6, 7, 1, 8, 9]\n",
       "Sequence 2 in x\n",
       "  Input:  By Jove , my quick study of lexicography won a prize .\n",
-      "  Output: [5, 9, 16, 1, 19, 6, 8, 18, 2, 17]\n",
+      "  Output: [10, 11, 12, 2, 13, 14, 15, 16, 3, 17]\n",
       "Sequence 3 in x\n",
       "  Input:  This is a short sentence .\n",
-      "  Output: [11, 4, 2, 21, 12]\n"
+      "  Output: [18, 19, 3, 20, 21]\n"
      ]
     }
    ],
@@ -300,14 +294,14 @@
      "output_type": "stream",
      "text": [
       "Sequence 1 in x\n",
-      "  Input:  [ 3  1 15 14 20  7  3 13 10]\n",
-      "  Output: [ 3  1 15 14 20  7  3 13 10  0]\n",
+      "  Input:  [1 2 4 5 6 7 1 8 9]\n",
+      "  Output: [1 2 4 5 6 7 1 8 9 0]\n",
       "Sequence 2 in x\n",
-      "  Input:  [ 5  9 16  1 19  6  8 18  2 17]\n",
-      "  Output: [ 5  9 16  1 19  6  8 18  2 17]\n",
+      "  Input:  [10 11 12  2 13 14 15 16  3 17]\n",
+      "  Output: [10 11 12  2 13 14 15 16  3 17]\n",
       "Sequence 3 in x\n",
-      "  Input:  [11  4  2 21 12]\n",
-      "  Output: [11  4  2 21 12  0  0  0  0  0]\n"
+      "  Input:  [18 19  3 20 21]\n",
+      "  Output: [18 19  3 20 21  0  0  0  0  0]\n"
      ]
     }
    ],
@@ -447,35 +441,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 110288 samples, validate on 27573 samples\n",
-      "Epoch 1/10\n",
-      "110288/110288 [==============================] - 8s - loss: 2.0527 - acc: 0.5353 - val_loss: 1.4806 - val_acc: 0.6130\n",
-      "Epoch 2/10\n",
-      "110288/110288 [==============================] - 7s - loss: 1.3451 - acc: 0.6309 - val_loss: 1.2415 - val_acc: 0.6444\n",
-      "Epoch 3/10\n",
-      "110288/110288 [==============================] - 7s - loss: 1.1877 - acc: 0.6532 - val_loss: 1.1421 - val_acc: 0.660805 - ETA: 0s - loss: 1.1933 \n",
-      "Epoch 4/10\n",
-      "110288/110288 [==============================] - 7s - loss: 1.1130 - acc: 0.6618 - val_loss: 1.0843 - val_acc: 0.6579\n",
-      "Epoch 5/10\n",
-      "110288/110288 [==============================] - 7s - loss: 1.0630 - acc: 0.6695 - val_loss: 1.0403 - val_acc: 0.6680\n",
-      "Epoch 6/10\n",
-      "110288/110288 [==============================] - 7s - loss: 1.0278 - acc: 0.6762 - val_loss: 1.0050 - val_acc: 0.6835\n",
-      "Epoch 7/10\n",
-      "110288/110288 [==============================] - 7s - loss: 0.9950 - acc: 0.6859 - val_loss: 0.9788 - val_acc: 0.6891\n",
-      "Epoch 8/10\n",
-      "110288/110288 [==============================] - 7s - loss: 0.9674 - acc: 0.6945 - val_loss: 0.9573 - val_acc: 0.7028\n",
-      "Epoch 9/10\n",
-      "110288/110288 [==============================] - 7s - loss: 0.9444 - acc: 0.7022 - val_loss: 0.9306 - val_acc: 0.7122\n",
-      "Epoch 10/10\n",
-      "110288/110288 [==============================] - 7s - loss: 0.9231 - acc: 0.7091 - val_loss: 0.8965 - val_acc: 0.7200\n",
-      "new jersey est parfois calme en mois et il est il est en <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n"
+      "(137861, 21, 1)\n",
+      "(?, 21, 1)\n",
+      "(?, ?, 100)\n",
+      "(?, 21, 345)\n"
      ]
     }
    ],
@@ -531,9 +507,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(137861, 21)\n",
+      "(?, 21)\n",
+      "(?, 21, 100)\n",
+      "(?, ?, 100)\n",
+      "(?, 21, 345)\n"
+     ]
+    }
+   ],
    "source": [
     "def embed_model(input_shape, output_sequence_length, english_vocab_size, french_vocab_size):\n",
     "    \"\"\"\n",
@@ -545,15 +533,28 @@
     "    :return: Keras model built, but not trained\n",
     "    \"\"\"\n",
     "    # TODO: Implement\n",
-    "    return None\n",
+    "    inputs = Input(shape=input_shape[1:])\n",
+    "    embeddings = Embedding(english_vocab_size, 100, input_length=input_shape[1])(inputs)\n",
+    "    rnn = GRU(100, return_sequences=True)(embeddings)\n",
+    "    predictions = Dense(french_vocab_size, activation='softmax')(rnn)\n",
+    "    learning_rate = 0.01\n",
+    "    \n",
+    "    model = Model(inputs=inputs, outputs=predictions)\n",
+    "    model.compile(loss=sparse_categorical_crossentropy, optimizer=Adam(learning_rate), metrics=['accuracy'])\n",
+    "    \n",
+    "    return model\n",
     "tests.test_embed_model(embed_model)\n",
     "\n",
     "\n",
     "# TODO: Reshape the input\n",
+    "tmp_x = pad(preproc_english_sentences, max_french_sequence_length)\n",
     "\n",
     "# TODO: Train the neural network\n",
+    "embed_rnn_model = embed_model(tmp_x.shape, max_french_sequence_length, english_vocab_size+1, french_vocab_size+1)\n",
+    "embed_rnn_model.fit(tmp_x, preproc_french_sentences, batch_size=1024, epochs=15, validation_split=0.2)\n",
     "\n",
-    "# TODO: Print prediction(s)"
+    "# TODO: Print prediction(s)\n",
+    "print(logits_to_text(embed_rnn_model.predict(tmp_x[:1])[0], french_tokenizer))"
    ]
   },
   {
@@ -568,7 +569,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def bd_model(input_shape, output_sequence_length, english_vocab_size, french_vocab_size):\n",
@@ -601,7 +604,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def encdec_model(input_shape, output_sequence_length, english_vocab_size, french_vocab_size):\n",
@@ -632,7 +637,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def model_final(input_shape, output_sequence_length, english_vocab_size, french_vocab_size):\n",
@@ -663,7 +670,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def final_predictions(x, y, x_tk, y_tk):\n",
@@ -730,7 +739,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "!!python -m nbconvert *.ipynb"
@@ -762,7 +773,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
